fixing issue with buttons on Safari Mobile

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -44,10 +44,6 @@
 	}
 }
 
-.navbutton {
-    -webkit-appearance: none;
-}
-
 #map_canvas {
 	height: 400px;
 	background-color: #CCCCCC;
